# aloecrypt

./: .gitignore  .technoproj  Cargo.toml  Makefile  README.md  test.sh
python/: mockup.py
script/: cargo_rs.mk  version.mk
src/: aloecrypt.rs  cli.rs  curve_convert.rs  error.rs  keyfile.rs  keypair.rs  lib.rs  main.rs  peer_key.rs
tests/: interop.rs
