[package]
name = "aloecrypt"
version = "0.1.2"
edition = "2024"

[lib]
name = "aloecrypt"
src = "src/lib.rs"

[[bin]]
name = "aloecrypt"
src = "src/main.rs"

[dependencies]
curve25519-dalek = "4.1"
sha2 = "0.10"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0"
rmp-serde = "1.3.1"
lz4_flex = "0.12.0"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# Not Browser
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
uuid = {version = "1.20.0",features = ["v4", "v7", "fast-rng"]}

# Browser only
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
uuid = {version = "1.20.0",features = ["v4", "v7", "fast-rng", "js"]}
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }
